# react-native-nitro-dgram

./: README.md  README_zh.md  nitro.json  package.json  react-native-nitro-dgram.podspec  tsconfig.json
android/: CMakeLists.txt  OnLoad.cpp  build.gradle
android/src/main/java/com/margelo/nitro/udp/: NitroUdpPackage.java
cpp/: HybridUdpDriver.cpp  HybridUdpDriver.hpp  HybridUdpSocketDriver.cpp  HybridUdpSocketDriver.hpp  UdpBindings.hpp  UdpManager.hpp
docs/: API_COMPATIBILITY.md
ios/Frameworks/RustCUdp.xcframework/: Info.plist
ios/Frameworks/RustCUdp.xcframework/ios-arm64/RustCUdp.framework/: Info.plist  RustCUdp
ios/Frameworks/RustCUdp.xcframework/ios-arm64_x86_64-simulator/RustCUdp.framework/: RustCUdp
src/: Driver.ts  Udp.nitro.ts  index.ts
